--- a/render.yaml
+++ b/render.yaml
@@ -7,6 +7,7 @@ services:
       composer install --no-dev --optimize-autoloader
       php artisan key:generate
       php artisan config:cache
+      touch /data/database.sqlite
     startCommand: php artisan serve --host=0.0.0.0 --port=10000
     envVars:
       - key: APP_ENV
